<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="#ffffff" 
    >

    <TextView 
        android:id="@+id/tv_delete_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="2dp"
        android:text="@string/tv_delete_title_text"
        />
    <View
        android:id="@+id/view_delete_sp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tv_delete_title"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#3399ff" 
        />
    <TextView 
        android:id="@+id/tv_delete_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#cc0000"
        android:gravity="center"
        android:text="@string/tv_delete_sure_text"
        android:layout_below="@+id/view_delete_sp"
        android:layout_margin="10dp"
        />
    <CheckBox 
        android:id="@+id/cb_delete_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textSize="12sp"
        android:layout_marginLeft="20dp"
        android:text="@string/cb_delete_file_text"
        android:layout_below="@+id/tv_delete_sure"
        />
    <LinearLayout 
        android:id="@+id/ll_delete"
        android:layout_below="@+id/cb_delete_file"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <Button 
            android:id="@+id/btn_delete_sure"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/btn_delete_sure_text"
            android:background="@drawable/btn_selector"
            />
        <Button 
            android:id="@+id/btn_delete_cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/btn_delete_cancel_text"
            android:background="@drawable/btn_selector"
            />
    </LinearLayout>

</RelativeLayout>
